--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Series 9.0</title>
     <link rel="stylesheet" href="src/styling/style.css">
+    <link rel="shortcut icon" href="src/assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
