create download our mobile apps

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Web Development Series 9.0</title>
     <link rel="stylesheet" href="src/styling/style.css">
     <link rel="shortcut icon" href="src/assets/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 
 <body>
@@ -111,6 +112,56 @@
             <div class="right">
                 <img src="src/assets/services/element.png" alt="left">
             </div>
+        </section>
+
+        <!-- Leading Healthcare Providers -->
+
+        <section class="leading" id="leading">
+            <div class="leading__container container">
+                <div class="content">
+                    <div class="box">
+                        <div class="img">
+                            <img src="src/assets/landing/trafalgar-illustration sec02 1.png" alt="element">
+                        </div>
+
+                        <div class="text">
+                            <h2>Leading healthcare providers</h2>
+
+                            <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and
+                                online
+                                for everyone. To us, it’s not just work. We take pride in the solutions we deliver</p>
+
+                            <div class="btn primary">
+                                <a href="#">Learn More</a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="box secondary" id="apps">
+                        <div class="text">
+                            <h2>Download our mobile apps</h2>
+
+                            <p>Our dedicated patient engagement app and
+                                web portal allow you to access information instantaneously (no tedeous form, long calls,
+                                or administrative hassle) and securely</p>
+
+                            <div class="btn primary">
+                                <a href="#">Download <i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+
+                        <div class="img">
+                            <img src="src/assets/apps/trafalgar-illustration sec03 1.png" alt="element">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="element">
+                    <img src="src/assets/apps/element.png" alt="">
+                </div>
+            </div>
+
         </section>
     </main>
 </body>
