--- a/index.html
+++ b/index.html
@@ -163,7 +163,187 @@
             </div>
 
         </section>
+
+        <!-- Testimonials -->
+
+        <section class="testimonials" id="testimonials">
+            <div class="testimonials__container container">
+                <div class="box">
+                    <h1>What our customer are saying</h1>
+
+                    <div class="profile">
+                        <div class="img">
+                            <img src="src/assets/testi/Mask Group.png" alt="">
+
+                            <div class="text">
+                                <h2>Edward Newgate</h2>
+                                <span>Founder Circle</span>
+                            </div>
+                        </div>
+
+                        <p>Our dedicated patient engagement app and
+                            web portal allow you to access information instantaneously (no tedeous form, long calls,
+                            or administrative hassle) and securely</p>
+                    </div>
+
+                    <div class="element">
+                        <img src="src/assets/testi/Group (1).png" alt="">
+                    </div>
+                </div>
+
+                <div class="element__2">
+                    <img src="src/assets/testi/Group.png" alt="">
+                </div>
+
+                <div class="pagination">
+                    <img src="src/assets/testi/arrow nav.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Article -->
+
+        <section class="article" id="article">
+            <div class="article__container container">
+                <div class="heading">
+                    <h2>Check out our latest article</h2>
+                </div>
+
+                <div class="content">
+                    <div class="box">
+                        <div class="img">
+                            <img src="src/assets/article/Mask Group.png" alt="article-1">
+                        </div>
+
+                        <div class="text">
+                            <h3>Disease detection, check
+                                up in the laboratory</h3>
+                            <p>In this case, the role of the health laboratory is very important to do
+                                a disease detection...</p>
+                            <a href="#">Read More <i class='bx bx-right-arrow-alt'></i></a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="img">
+                            <img src="src/assets/article/Mask Group (1).png" alt="article-2">
+                        </div>
+
+                        <div class="text">
+                            <h3>Herbal medicines that are
+                                safe for consumption</h3>
+                            <p>Herbal medicine is very widely used at this time because of its very good for your
+                                health...</p>
+                            <a href="#">Read More <i class='bx bx-right-arrow-alt'></i></a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="img">
+                            <img src="src/assets/article/Mask Group (2).png" alt="article-3">
+                        </div>
+
+                        <div class="text">
+                            <h3>Natural care for healthy
+                                facial skin</h3>
+                            <p>A healthy lifestyle should start from now and also for your skin health.
+                                There are some...</p>
+                            <a href="#">Read More <i class='bx bx-right-arrow-alt'></i></a>
+                        </div>
+                    </div>
+
+                    <div class="left">
+                        <img src="src/assets/article/element.png" alt="">
+                    </div>
+                </div>
+
+                <div class="btn primary">
+                    <a href="#">View all</a>
+                </div>
+            </div>
+
+            <div class="right">
+                <img src="src/assets/article/element (1).png" alt="">
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer__container container">
+            <div class="box">
+                <div class="img">
+                    <img src="src/assets/footer/trafalgar.png" alt="logo">
+                </div>
+
+                <ol>
+                    <div class="footer__list">
+                        <h3>Company</h3>
+
+                        <li>
+                            <a href="#about">About</a>
+                        </li>
+                        <li>
+                            <a href="#testimonials">Testimonials</a>
+                        </li>
+                        <li>
+                            <a href="#find-a-doctor">Find a doctor</a>
+                        </li>
+                        <li>
+                            <a href="#apps">Apps</a>
+                        </li>
+                    </div>
+
+                    <div class="footer__list">
+                        <h3>Region</h3>
+
+                        <li>
+                            <a href="#indonesia">Indonesia</a>
+                        </li>
+
+                        <li>
+                            <a href="#singapore">Singapore</a>
+                        </li>
+
+                        <li>
+                            <a href="#hongkong">Hongkong</a>
+                        </li>
+
+                        <li>
+                            <a href="#canada">Canada</a>
+                        </li>
+                    </div>
+
+                    <div class="footer__list">
+                        <h3>Help</h3>
+
+                        <li>
+                            <a href="#help">Help center</a>
+                        </li>
+
+                        <li>
+                            <a href="#contact">Contact support</a>
+                        </li>
+
+                        <li>
+                            <a href="#instructions">Instructions</a>
+                        </li>
+
+                        <li>
+                            <a href="#how-it-works">How it works</a>
+                        </li>
+                    </div>
+                </ol>
+            </div>
+        </div>
+
+        <div class="left">
+            <img src="src/assets/footer/element.png" alt="">
+        </div>
+
+        <div class="right">
+            <img src="src/assets/footer/element (1).png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
