--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
                 <li class="nav__item"><a class="nav__link" href="#apps">Apps</a></li>
                 <li class="nav__item"><a class="nav__link" href="#testimonials">Testimonials</a></li>
                 <li class="nav__item"><a class="nav__link" href="#about-us">About us</a></li>
+
+                <div class="close">
+                    <i class='bx bx-x'></i>
+                </div>
             </ul>
+
+            <div class="nav__actions">
+                <div class="hamburger">
+                    <i class='bx bx-menu'></i>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -118,42 +128,22 @@
 
         <section class="leading" id="leading">
             <div class="leading__container container">
-                <div class="content">
-                    <div class="box">
-                        <div class="img">
-                            <img src="src/assets/landing/trafalgar-illustration sec02 1.png" alt="element">
-                        </div>
-
-                        <div class="text">
-                            <h2>Leading healthcare providers</h2>
-
-                            <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and
-                                online
-                                for everyone. To us, it’s not just work. We take pride in the solutions we deliver</p>
-
-                            <div class="btn primary">
-                                <a href="#">Learn More</a>
-                            </div>
-
-                        </div>
+                <div class="box">
+                    <div class="img">
+                        <img src="src/assets/landing/trafalgar-illustration sec02 1.png" alt="element">
                     </div>
 
-                    <div class="box secondary" id="apps">
-                        <div class="text">
-                            <h2>Download our mobile apps</h2>
+                    <div class="text">
+                        <h2>Leading healthcare providers</h2>
 
-                            <p>Our dedicated patient engagement app and
-                                web portal allow you to access information instantaneously (no tedeous form, long calls,
-                                or administrative hassle) and securely</p>
+                        <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and
+                            online
+                            for everyone. To us, it’s not just work. We take pride in the solutions we deliver</p>
 
-                            <div class="btn primary">
-                                <a href="#">Download <i class='bx bx-down-arrow-alt'></i></a>
-                            </div>
+                        <div class="btn primary">
+                            <a href="#">Learn More</a>
                         </div>
 
-                        <div class="img">
-                            <img src="src/assets/apps/trafalgar-illustration sec03 1.png" alt="element">
-                        </div>
                     </div>
                 </div>
 
@@ -161,7 +151,29 @@
                     <img src="src/assets/apps/element.png" alt="">
                 </div>
             </div>
+        </section>
 
+        <section class="apps" id="apps">
+            <div class="apps__container container">
+
+                <div class="box">
+                    <div class="text">
+                        <h2>Download our mobile apps</h2>
+
+                        <p>Our dedicated patient engagement app and
+                            web portal allow you to access information instantaneously (no tedeous form, long calls,
+                            or administrative hassle) and securely</p>
+
+                        <div class="btn primary">
+                            <a href="#">Download <i class='bx bx-down-arrow-alt'></i></a>
+                        </div>
+                    </div>
+
+                    <div class="img">
+                        <img src="src/assets/apps/trafalgar-illustration sec03 1.png" alt="element">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Testimonials -->
@@ -344,6 +356,8 @@
             <img src="src/assets/footer/element (1).png" alt="">
         </div>
     </footer>
+
+    <script src="src/js/main.js" defer></script>
 </body>
 
 </html>
