--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- Services -->
 
-        <section class="services" id="services">
+        <section class="services">
             <div class="services__container container">
                 <div class="heading">
                     <h2>Our Services</h2>
