add gsap to loading screen

--- a/index.html
+++ b/index.html
@@ -15,9 +15,34 @@
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   </head>
 
   <body>
+    <div class="loading-screen">
+      <div class="loading-content">
+        <svg class="loading-circle" viewBox="0 0 50 50">
+          <circle
+            class="circle"
+            cx="25"
+            cy="25"
+            r="20"
+            fill="none"
+            stroke-width="4"
+          />
+        </svg>
+
+        <div class="loading-logo">
+          <img src="src/assets/header/logo.png" alt="logo" />
+        </div>
+
+        <div class="loading-credit">
+          <span>by</span>
+          <span>Rizki Ramadhan</span>
+        </div>
+      </div>
+    </div>
+
     <header>
       <nav class="nav container">
         <div class="profile">
